2019-06-09  Morten Welinder  <terra@gnome.org>

	* goffice/utils/go-format.c (go_format_has_year)
	(go_format_has_month) (go_format_has_day): new functions.

2019-06-07  Jean Brefort  <jean.brefort@normalesup.org>

	* goffice/gtk/go-math-editor.c (go_math_editor_class_init): fix signals to
	make it work again.

2019-05-22  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2019-05-20  Morten Welinder <terra@gnome.org>

	* Release 0.10.45

2019-04-05  Jean Brefort  <jean.brefort@normalesup.org>

	* plugins/plot_pie/gog-pie.c (gog_ring_plot_class_init): fix ring plot
	center size persistence. [#395]

2019-01-15  Jean Brefort  <jean.brefort@normalesup.org>

	* plugins/smoothing/gog-exp-smooth.c (gog_exp_smooth_update): protect
	against NULL y values. [#377]

2018-11-24  Morten Welinder  <terra@gnome.org>

	* goffice/math/go-quad.c: Introspection fixes.

2018-11-24  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-11-24  Morten Welinder <terra@gnome.org>

	* Release 0.10.44

2018-08-19  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-08-19  Morten Welinder <terra@gnome.org>

	* Release 0.10.43

2018-08-09  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-08-09  Morten Welinder <terra@gnome.org>

	* Release 0.10.42

2018-08-06  Morten Welinder  <terra@gnome.org>

	* tests/test-quad.c (pow_tests): Comment out exp test.  It's not
	setup for quad correctly.

2018-08-05  Morten Welinder  <terra@gnome.org>

	* tests/test-quad.c: Try to make the tests work a bit better for
	the excess-precision case, i.e., x86 in 32-bit mode.

2018-08-03  Morten Welinder  <terra@gnome.org>

	* goffice/goffice.c (libgoffice_init): Use g_type_ensure to avoid
	giving the compiler any good ideas about removing calls.

2018-07-13  Jean Brefort  <jean.brefort@normalesup.org>

	* plugins/plot_distrib/gog-boxplot.c (gog_box_plot_view_render): do