@@ -2,6 +2,7 @@ goffice 0.10.46:
 
 Jean:
 	* Fix equations edition inside charts.
+	* Fix legend contents for contour plots. [#404]
 
 Morten:
 	* Add more functions to inspect formats.
